Stats, TopPlatBrows: fix gaps, desktop sizes

--- a/src/public/less/components/top-platform-browser.less
+++ b/src/public/less/components/top-platform-browser.less
@@ -5,9 +5,12 @@
 	-webkit-font-smoothing: antialiased;
 	display: flex;
 	width: 100%;
-	max-width: 588px;
 	flex-direction: column;
 	row-gap: 24px;
+
+	@media (min-width: @screen-md-min) {
+		max-width: 588px;
+	}
 
 	.info {
 		display: flex;
@@ -325,16 +328,30 @@
 			row-gap: 16px;
 			padding: 16px;
 
+			@media (min-width: @screen-sm-min) {
+				flex-direction: row;
+				justify-content: space-between;
+			}
+
 			&_range {
 				font-weight: 400;
 				font-size: 12px;
 				line-height: 16px;
 				color: #17233b;
+
+				@media (min-width: @screen-sm-min) {
+					font-size: 14px;
+					line-height: 20px;
+				}
 			}
 
 			&_ctrls {
 				display: flex;
 				width: 100%;
+
+				@media (min-width: @screen-sm-min) {
+					width: auto;
+				}
 
 				&_btn {
 					display: flex;
@@ -352,10 +369,17 @@
 
 					&-prev {
 						border-radius: 6px 0 0 6px;
+						@media (min-width: @screen-sm-min) {
+							order: 2;
+						}
 					}
 
 					&-next {
 						border-radius: 0 6px 6px 0;
+
+						@media (min-width: @screen-sm-min) {
+							order: 3;
+						}
 					}
 				}
 
@@ -367,6 +391,16 @@
 					column-gap: 12px;
 					border-top: 1px solid #cfd6dd;
 					border-bottom: 1px solid #cfd6dd;
+
+					@media (min-width: @screen-sm-min) {
+						order: 1;
+						border: none;
+						margin-right: 16px;
+					}
+
+					@media (min-width: @screen-md-min) {
+						margin-right: 24px;
+					}
 
 					>span {
 						font-size: 12px;
@@ -386,6 +420,11 @@
 							background-color: transparent;
 							border: none;
 							box-shadow: none;
+
+							@media (min-width: @screen-sm-min) {
+								font-size: 14px;
+								line-height: 20px;
+							}
 
 							>img {
 								transform: rotate(-90deg);
