--- a/src/public/less/pages/statistics.less
+++ b/src/public/less/pages/statistics.less
@@ -508,20 +508,30 @@
 			display: flex;
 			flex-direction: column;
 			margin-top: 40px;
+			row-gap: 40px;
 
 			@media (min-width: @screen-sm-min) {
-				flex-direction: row;
-				justify-content: space-between;
-				column-gap: 16px;
 				margin-top: 80px;
 			}
 
 			@media (min-width: @screen-md-min) {
+				flex-direction: row;
+				justify-content: space-between;
 				column-gap: 24px;
 			}
 
 			@media (min-width: @screen-lg-min) {
 				column-gap: 48px;
+			}
+
+			.c-top-platform-browser {
+				@media (min-width: @screen-md-min) {
+					max-width: calc((100% - 24px) / 2);
+				}
+
+				@media (min-width: @screen-lg-min) {
+					max-width: calc((100% - 48px) / 2);
+				}
 			}
 		}
 
